@@ -1,3 +1,11 @@
+2004-02-14  Rolf Schroedter <rolf.schroedter@dlr.de>
+
+	* API changes
+	    wandName FxImage expr ?newName?
+	    wandName FxImageChannel channelType expr ?newName?
+
+	* Added a few words to documentation
+
 2004-02-08  Rolf Schroedter <rolf.schroedter@dlr.de>
 
 	* API renamed: 
